add sso configs & some GKE configs

--- a/local/kind_cluster.yaml
+++ b/local/kind_cluster.yaml
@@ -20,4 +20,4 @@ nodes:
         protocol: TCP
     extraMounts:
     - hostPath: /home/jered/workplace/team-engineering/airflow/dags
-      containerPath: /opt/airflow/dags
+      containerPath: /mnt/airflow/dags
