--- a/modules/argo-master-app/helm/templates/argo-master-app.yaml
+++ b/modules/argo-master-app/helm/templates/argo-master-app.yaml
@@ -9,6 +9,8 @@ spec:
     repoURL: {{ .Values.githubRepo }}
     targetRevision: HEAD
     path: argo-master-apps
+    directory:
+      recurse: true
   destination: 
     server: https://kubernetes.default.svc
     namespace: argo-master-apps
