module changes for master app and some comments

--- a/modules/argo-master-app/helm/templates/argo-master-app.yaml
+++ b/modules/argo-master-app/helm/templates/argo-master-app.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     repoURL: {{ .Values.githubRepo }}
-    targetRevision: HEAD
+    targetRevision: {{ .Values.githubBranch }}
     path: argo-master-apps
     directory:
       recurse: true
