--- a/local/kind_cluster.yaml
+++ b/local/kind_cluster.yaml
@@ -12,12 +12,10 @@ nodes:
           kubeletExtraArgs:
             node-labels: "ingress-ready=true"
     extraPortMappings:
-      - containerPort: 80
-        hostPort: 80
-        protocol: TCP
-      - containerPort: 443
-        hostPort: 443
-        protocol: TCP
+    - containerPort: 30000
+      hostPort: 30000
+      listenAddress: "0.0.0.0" # Optional, defaults to "0.0.0.0"
+      protocol: tcp # Optional, defaults to tcp
     extraMounts:
     - hostPath: /home/jered/workplace/team-engineering/airflow/dags
       containerPath: /mnt/airflow/dags
